src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__summary__tests__snapshot_summary_50_plus_tasks.snap
---
source: src/commands/task/orchestrate/summary.rs
expression: normalized
---
┌───────┬────────────┬──────────┬──────────┬─────────┐
│ Task  │ Status     │ Cost     │ Time     │ Retries │
├───────┼────────────┼──────────┼──────────┼─────────┤
│ 1.1   │ Done       │ $0.0188  │ 18s      │ 0       │
│ 1.2   │ Done       │ $0.0366  │ 31s      │ 0       │
│ 1.3   │ Blocked    │ $0.0544  │ 44s      │ 0       │
│ 1.4   │ Done       │ $0.0722  │ 57s      │ 0       │
│ 1.5   │ Failed     │ $0.0900  │ 1m10s    │ 5       │
│ 1.6   │ Done       │ $0.1078  │ 1m23s    │ 0       │
│ 1.7   │ Done       │ $0.1256  │ 1m36s    │ 0       │
│ 1.8   │ Blocked    │ $0.1434  │ 1m49s    │ 0       │
│ 1.9   │ Done       │ $0.1612  │ 2m2s     │ 0       │
│ 1.10  │ Failed     │ $0.1790  │ 2m15s    │ 4       │
│ 2.1   │ Done       │ $0.1968  │ 2m28s    │ 0       │
│ 2.2   │ Done       │ $0.2146  │ 2m41s    │ 0       │
│ 2.3   │ Blocked    │ $0.2324  │ 2m54s    │ 0       │
│ 2.4   │ Done       │ $0.2502  │ 3m7s     │ 0       │
│ 2.5   │ Failed     │ $0.2680  │ 3m20s    │ 3       │
│ 2.6   │ Done       │ $0.2858  │ 3m33s    │ 0       │
│ 2.7   │ Done       │ $0.3036  │ 3m46s    │ 0       │
│ 2.8   │ Blocked    │ $0.3214  │ 3m59s    │ 0       │
│ 2.9   │ Done       │ $0.3392  │ 4m12s    │ 0       │
│ 2.10  │ Failed     │ $0.3570  │ 4m25s    │ 2       │
│ 3.1   │ Done       │ $0.3748  │ 4m38s    │ 0       │
│ 3.2   │ Done       │ $0.3926  │ 4m51s    │ 0       │
│ 3.3   │ Blocked    │ $0.4104  │ 5m4s     │ 0       │
│ 3.4   │ Done       │ $0.4282  │ 5m17s    │ 0       │
│ 3.5   │ Failed     │ $0.4460  │ 5m30s    │ 1       │
│ 3.6   │ Done       │ $0.4638  │ 5m43s    │ 0       │
│ 3.7   │ Done       │ $0.4816  │ 5m56s    │ 0       │
│ 3.8   │ Blocked    │ $0.4994  │ 6m9s     │ 0       │
│ 3.9   │ Done       │ $0.5172  │ 6m22s    │ 0       │
│ 3.10  │ Failed     │ $0.5350  │ 6m35s    │ 0       │
│ 4.1   │ Done       │ $0.5528  │ 6m48s    │ 0       │
│ 4.2   │ Done       │ $0.5706  │ 7m1s     │ 0       │
│ 4.3   │ Blocked    │ $0.5884  │ 7m14s    │ 0       │
│ 4.4   │ Done       │ $0.6062  │ 7m27s    │ 0       │
│ 4.5   │ Failed     │ $0.6240  │ 7m40s    │ 5       │
│ 4.6   │ Done       │ $0.6418  │ 7m53s    │ 0       │
│ 4.7   │ Done       │ $0.6596  │ 8m6s     │ 0       │
│ 4.8   │ Blocked    │ $0.6774  │ 8m19s    │ 0       │
│ 4.9   │ Done       │ $0.6952  │ 8m32s    │ 0       │
│ 4.10  │ Failed     │ $0.7130  │ 8m45s    │ 4       │
│ 5.1   │ Done       │ $0.7308  │ 8m58s    │ 0       │
│ 5.2   │ Done       │ $0.7486  │ 9m11s    │ 0       │
│ 5.3   │ Blocked    │ $0.7664  │ 9m24s    │ 0       │
│ 5.4   │ Done       │ $0.7842  │ 9m37s    │ 0       │
│ 5.5   │ Failed     │ $0.8020  │ 9m50s    │ 3       │
│ 5.6   │ Done       │ $0.8198  │ 10m3s    │ 0       │
│ 5.7   │ Done       │ $0.8376  │ 10m16s   │ 0       │
│ 5.8   │ Blocked    │ $0.8554  │ 10m29s   │ 0       │
│ 5.9   │ Done       │ $0.8732  │ 10m42s   │ 0       │
│ 5.10  │ Failed     │ $0.8910  │ 10m55s   │ 2       │
│ 6.1   │ Done       │ $0.9088  │ 11m8s    │ 0       │
│ 6.2   │ Done       │ $0.9266  │ 11m21s   │ 0       │
│ 6.3   │ Blocked    │ $0.9444  │ 11m34s   │ 0       │
│ 6.4   │ Done       │ $0.9622  │ 11m47s   │ 0       │
│ 6.5   │ Failed     │ $0.9800  │ 12m0s    │ 1       │
├───────┼────────────┼──────────┼──────────┼─────────┤
│ TOTAL │ 33/55 done │ $27.4670 │ 5h38m    │         │
└───────┴────────────┴──────────┴──────────┴─────────┘

Parallelism speedup: 4.0x (sum of task times / wall clock)
