src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__summary__tests__snapshot_summary_emoji_task_id.snap
---
source: src/commands/task/orchestrate/summary.rs
expression: normalized
---
┌───────┬───────────┬──────────┬──────────┬─────────┐
│ Task  │ Status    │ Cost     │ Time     │ Retries │
├───────┼───────────┼──────────┼──────────┼─────────┤
│ 🚀-1  │ Done      │ $0.0456  │ 37s      │ 0       │
│ 🎯-2  │ ✅ OK     │ $0.0723  │ 54s      │ 0       │
│ 💥-3  │ ❌ Failed │ $0.0189  │ 22s      │ 4       │
├───────┼───────────┼──────────┼──────────┼─────────┤
│ TOTAL │ 1/3 done  │ $0.1368  │ 1m53s    │         │
└───────┴───────────┴──────────┴──────────┴─────────┘

Parallelism speedup: 1.6x (sum of task times / wall clock)
