src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__summary__tests__snapshot_summary_empty.snap
---
source: src/commands/task/orchestrate/summary.rs
expression: normalized
---
No tasks were executed.
