src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__summary__tests__snapshot_summary_mixed_unicode_width.snap
---
source: src/commands/task/orchestrate/summary.rs
expression: normalized
---
┌──────────────┬──────────┬──────────┬──────────┬─────────┐
│ Task         │ Status   │ Cost     │ Time     │ Retries │
├──────────────┼──────────┼──────────┼──────────┼─────────┤
│ 中文-1       │ Done     │ $0.0345  │ 31s      │ 0       │
│ こんにちは-2 │ Done     │ $0.0678  │ 1m2s     │ 0       │
│ ASCII-3      │ Failed   │ $0.0123  │ 15s      │ 1       │
│ Ż🎯中-4      │ Done     │ $0.0901  │ 1m29s    │ 0       │
├──────────────┼──────────┼──────────┼──────────┼─────────┤
│ TOTAL        │ 3/4 done │ $0.2047  │ 3m17s    │         │
└──────────────┴──────────┴──────────┴──────────┴─────────┘

Parallelism speedup: 1.6x (sum of task times / wall clock)
