src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__summary__tests__snapshot_summary_polish_chars_task_id.snap
---
source: src/commands/task/orchestrate/summary.rs
expression: normalized
---
┌────────┬──────────┬──────────┬──────────┬─────────┐
│ Task   │ Status   │ Cost     │ Time     │ Retries │
├────────┼──────────┼──────────┼──────────┼─────────┤
│ Ążśź-1 │ Done     │ $0.0512  │ 41s      │ 0       │
│ Łódź-2 │ Done     │ $0.0834  │ 59s      │ 0       │
│ Ćwik-3 │ Błąd     │ $0.0267  │ 28s      │ 2       │
├────────┼──────────┼──────────┼──────────┼─────────┤
│ TOTAL  │ 2/3 done │ $0.1613  │ 2m8s     │         │
└────────┴──────────┴──────────┴──────────┴─────────┘

Parallelism speedup: 1.7x (sum of task times / wall clock)
